# robotik_ws2018

./: README.md
blatt11/: CMakeLists.txt  package.xml
blatt11/launch/: exploration.launch  map_server.launch  move_base_flex.launch  navigation.launch
blatt2/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
blatt2/scripts/: imu.py
blatt2/src/: imu.cpp
blatt3/: CMakeLists.txt  package.xml
blatt3/scripts/: median.py  multi_scans_to_cloud.py  scan_to_cloud.py
blatt3/src/: median.cpp  multi_scans_to_cloud.cpp  scan_to_cloud.cpp
blatt4/: CMakeLists.txt  package.xml
blatt4/scripts/: hough.py  online_finder.py
blatt5/: CMakeLists.txt  package.xml
blatt5/scripts/: filters.py
blatt5/src/: example.cpp  gauss.cpp
blatt6/: CMakeLists.txt  package.xml
blatt6/scripts/: odom_combined.py  odom_combined_template.py
blatt7/: CMakeLists.txt  package.xml
blatt7/scripts/: icp.py  lgs_test.py  test.py  transformation_test.py
blatt7/src/: scanmatching.cpp
blatt8/: CMakeLists.txt  package.xml
blatt8/scripts/: grid_mapper.py
blatt8/src/: grid_mapper.cpp  kurt_ekf.cpp
blatt9/: CMakeLists.txt  package.xml
blatt9/scripts/: freespace.py
robotik_ws2018/: CMakeLists.txt  package.xml
