<?xml version="1.0" ?>
<package>
  <name> robotik_ws2018 </name>
  <version>0.0.0</version>

  <description>
   Metapackage for lecture
  </description>

  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD, GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>radio_ros</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
